css/main.css
/* IAT339 */
/* Roan Clifford */
:root{
    --colour1: #561013;
    --colour2: #E07F00;
    --colour3: #002A32;
    --colour4: #7E3A76;

    background-color: #eae3c7;
}

body {
    font-family:'Arima','Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    margin: 0;
    width: 100vw;

    display: flex;
    flex-direction: column;

    align-items: center;
    /* background-color: #F5F3EF; */
}

/* NEW SECTION */
section, footer {
    margin: 1.5rem;
}

.page_main_content{
    display: flex;
    flex-direction: column;
    margin: 2.5rem 4rem;
    max-width: 100rem;
}

.callout{
    padding: 1rem 3rem 2rem 3rem;

    max-width: 100%;
    border: solid 3px var(--colour3);
    border-radius: 10px;
}

hr {
  height: 3px;
  border-width: 0px;
  color: var(--colour1);
  background-color: var(--colour1);
  width: 100%;
}

.userReview {
    margin-top: 1rem;
    margin-bottom: 1.5rem;
}

.userReview fieldset {
    border-radius: 5px;
    border-color: var(--colour1);
}

.userReview .writeReview, .submitReview {
    margin: 1rem;
}

.userReview textarea, select {
    width: 25%;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 4px;
}

.userReview legend {
    font-family: "Arima";
    font-weight: 600;
    font-size: 1.25rem;
}

.userReview p {
    font-weight: 600;  
}

.review {
    margin-top: 1.5rem;
    border-radius: 5px;
    border: solid 1px var(--colour3);
}

.review .topPart, .bottomPart {
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: var(--colour3);
    color: white;
    padding: 0.5rem;
}

.bottomPart {
    background-color: var(--colour1);
}

.topPart .userInfo {
    display: flex;
    align-items: center;    
}

.topPart p {
    margin-left: 0.5rem;
    margin-right: 0.5rem;
}

.reviewText {
    padding: 1rem;
}


/* NEW SECTION */

/* ///      Header Styles     ////*/
h1{
    font-family: "Barrio";
    font-weight: 500;
    font-style: normal;
    font-size: 3rem;
    margin-bottom: 0;
}

h2{
    font-family: "Darumadrop One";
    font-size: 2.4rem;
    margin-bottom: 1rem;
    margin-top: 0.5rem;
}

h3{
    font-family: "Arima";
    font-weight: 800;
    font-size: 1.75rem;

    margin-bottom: 0;
    margin-top: 0.5rem;
}

h4{
    font-size: 1.25rem;
    font-weight: 650;

    margin-top: 0.25rem;
    margin-bottom: 0;
}

/* ///      Code Boxes     ////*/
code{
    font-size: 0.85rem; 
    display: inline-block;
    max-width: fit-content;
    max-height: 20rem;
    overflow: scroll;

    color: #4b4b4b;
    background-color: #d1d1d1;
    border: 1px solid #4b4b4b;
    border-radius: 10px;
    box-sizing: border-box;
    padding: 0.75rem;
}

img{
    max-width: max-content;
}

/* ///      Fit text to page     ////*/
p, ol, ul{
    max-width: 90%;
    margin: 0;
}

/* ///      Default/in-text link     ////*/
a {
    color: rgb(142, 95, 216);
    text-decoration: none;
    font-weight: 550;
    transition: color 0.25s;
}

/* In class demo (CSS Basics Completed) */
a:hover, a:focus, a:active {
    color: #795f92;
}

/* In class demo (CSS Basics Completed) */
.img-link:hover, .img-link:focus{
    border: 3px solid purple
}

label{
    margin-right: 0.5rem;
    margin-left: 1.5rem;
    font-weight: 550;
    align-self: center;
}
input{
    border: 2px solid var(--colour3);
    border-radius: 10px;
    padding: 5px;
    margin-left: 0;

    transition: border-color 0.25s, border-width 0.25s;
}


input:hover, input:focus, input:active{
    border-color: var(--colour4);
}

button{
    align-content: center;

    border: none;
    border-radius: 10px;

    font-family: "Arima";
    font-weight: 600;
    font-size: .9rem;

    max-width: 12rem;
    padding: 0.5rem 1rem;

    text-align: center;

    background-color: white;
    transition: background-color 0.25s, color 0.2s;
}

button:hover{
    background-color: var(--colour4);
    color: white;
}

/* https://www.w3schools.com/howto/howto_css_custom_checkbox.asp */
.purchase_options_container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    max-width: fit-content;
    text-align: center;
}
.purchase_options_container div{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-items: center;
    margin: 1rem 1rem;
    min-width: fit-content;
}
.purchase_options_container .price{
    font-weight: 700;
}
.purchase_option{
    display: flex;
    flex-direction: row-reverse;
    justify-content: space-between;
    width: fit-content;

    margin: 0;

    align-items: center;
}
.purchase_option input{
    position: absolute;
    opacity: 0;
    cursor: pointer;
    height: 0;
    width: 0;
}
.purchase_option span{
    box-sizing: border-box;
    align-content: center;

    border: none;
    border-radius: 10px;

    font-family: "Arima";
    font-weight: 600;
    font-size: .9rem;

    min-width: fit-content;
    max-width: 12rem;
    padding: 0.5rem 1rem;

    text-align: center;

    background-color: white;
    transition: background-color 0.25s, border 0.2s, color 0.2s;
}

.purchase_option:hover input ~ span {
    border: solid 2px var(--colour4);
}

.purchase_option input:checked ~ span {
    background-color: var(--colour4);
    color: white;
}

/* ///      Colour Pallete Display     ////*/
.box{
    width: 100px;
    height: 100px;
}

.colour_pallete_box{
    display: flex;
}
.col_1{
    background-color: var(--colour1);
}
.col_2{
    background-color: var(--colour2);
}
.col_3{
    background-color: var(--colour3);
}
.col_4{
    background-color: var(--colour4);
    margin-left: 1rem;
}

/* ///      Glow on Hover     ////*/
.glow_on_hover{
    filter:none;
    transition: filter 0.3s;
}
.glow_on_hover:hover, .glow_on_hover:active, .glow_on_hover:focus{
    filter: drop-shadow(0 0 0.5rem var(--colour2));
}
/* ... */

